syntax = "proto3";

package pilot;

option go_package = "./generated";


message averageRequest {
    float number = 1;
}

message averageResponse {
    float average  = 1;
}